@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.72 2000/08/19 23:15:38 stelian Exp $
+$Id: CHANGES,v 1.73 2000/08/19 23:48:10 stelian Exp $
 
 Changes between versions 0.4b17 and 0.4b19 (released ?????????????)
 ===================================================================
@@ -18,6 +18,11 @@ Changes between versions 0.4b17 and 0.4b19 (released ?????????????)
 	dumping a directory having a 1 character name length.
 	Thanks to Bernhard Erdmann <bernhard.erdmann@gmx.de>
 	for reporting the bug.
+
+5.	Reinforce dump in order to allow only level 0 and no
+	-u option when dumping a subdirectory, and document 
+	this in the man page. Thanks to Bernhard Erdmann 
+	<bernhard.erdmann@gmx.de> for reporting the bug.
 
 Changes between versions 0.4b17 and 0.4b18 (released June 30, 2000)
 ===================================================================
